# perdura-reliability

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENSE  README.md  SECURITY.md  VERSIONING.md  asv.conf.json  docker-compose.yml  package-lock.json  perdura.py  perdura.spec  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  product-assurance.yml  reference-evidence.yml  release.yml  sync-website-resources.yml
assurance/: accessibility-baseline.json  zap-rules.tsv
assurance/k6/: perdura-api.js
benchmarks/: __init__.py  benchmarks.py
ci/: constraints-min.txt
deploy/: Caddyfile  nginx.conf
docs/: DEPENDENCY_MANAGEMENT.md  DEPLOYMENT.md  website-resources.md
docs/assurance/: ARTIFACT_PROVENANCE.md  BUILD_VERIFICATION.md  SECURITY_PERFORMANCE_ASSURANCE.md  THREAT_MODEL.md  artifact-manifest.schema.json  asvs-5.0-scope.json  build-verification.schema.json  nist-ssdf-mapping.json
docs/audit/: artifact.json  assurance-addendum-2026-07-13.md  audit-summary.csv  backlog-summary.csv  backlog.csv  build-re-audit-artifact.mjs  control-board-bom-mapping-confidence-review.artifact.json  control-board-bom-mapping-confidence-review.html  control-board-bom-mapping-confidence-review.sql  coverage-matrix.csv  critical-findings.csv  crow-amsaa-verification-2026-07-13.md  findings.csv  implementation-backlog.md  model-assurance-framework.md  model-assurance-matrix.json  perdura-methodology-audit.html  perdura-methodology-re-audit.html  probe-results.csv  re-audit-artifact.json  re-audit-findings.csv  re-audit-probe-results.csv  re-audit-probes.py  re-audit-scope-comparison.csv  re-audit-status-counts.csv  re-audit-summary.csv  re-audit-visual-map.md  reliability-standards-opportunity-audit-2026-07-22.md  research-sources.md  uncertainty-coverage-v2.md  uncertainty-validation.md  validation-evidence.md  visual-map.md
docs/methodology/: accelerated-life-testing.md  derating-standards-audit.md  design-of-experiments.md  human-reliability.md  markov-models.md  mil-hdbk-217f-vita-51-1.md  physics-of-failure.md  process-analysis.md  radc-tr-85-91-nonoperating.md  regression-and-machine-learning.md  repairable-maintenance.md  (+5 more)
examples/: README.md  demo-project.json
gui/: start.sh
tests/: test_217plus.py  test_aiag_vda_fmea.py  test_allocation.py  test_alt_degradation_hierarchical.py  test_alt_degradation_intervals.py  test_alt_fitters.py  test_alt_step_stress.py  test_artifact_verifier.py  test_build_verification_evidence.py  test_confidence_intervals.py  test_dependencies.py  test_derating.py  test_descriptive.py  test_distributions.py  test_doe.py  test_doe_contract.py  test_example_datasets.py  test_fault_tree.py  test_fault_tree_advanced.py  test_fault_tree_enhanced.py  test_fides.py  test_fitters.py  test_grouped_life.py  test_growth_planning.py  test_hierarchical_degradation_validation.py  test_hypothesis_tests.py  test_life_data_uncertainty_api.py  test_markov.py  test_mil_hdbk_217f.py  test_mil_std_975m.py  test_mission_profile.py  test_model_assurance.py  test_msa.py  test_nswc.py  test_performance_evidence.py  test_prediction_mission_profile.py  test_predictive.py  test_probability_plotting.py  test_process_analysis_rigor.py  test_product_assurance.py  (+28 more)
tools/: build_api_contract_evidence.py  build_nist_examples.py  build_release_sbom.py  build_verification_evidence.py  bump_version.py  check_locked_environment.py  check_model_assurance.py  check_product_assurance.py  check_reference_evidence.py  check_version_consistency.py  crow_amsaa_validation.py  hierarchical_degradation_validation.json  hierarchical_degradation_validation.py  performance_workloads.py  refresh_demo_project.py  run_performance_baseline.py  run_sparse_selection_matrix.py  stamp_build.py  uncertainty_coverage_matrix.json  uncertainty_coverage_matrix.py  verify_perdura_artifact.py
(+526 files in other folders)
