[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reliability"
version = "0.3.2"
description = "A comprehensive reliability engineering suite for Python"
requires-python = ">=3.11"
# Floors are the oldest release of each package that (a) supports Python 3.11
# — the minimum interpreter, since the code uses PEP 604 `X | Y` unions in
# runtime-evaluated annotations (>=3.10) — and (b) supports NumPy 2, which the
# code requires via np.trapezoid (added in NumPy 2.0). The min-deps CI lane
# installs exactly these floors so they stay verified.
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "pandas>=2.2.2",
]

[project.optional-dependencies]
dev = ["pytest>=9.1.1", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
