[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reliability"
version = "0.3.2"
description = "A comprehensive reliability engineering suite for Python"
requires-python = ">=3.11"
# Source-install lower bounds describe APIs required by Perdura. Release
# binaries resolve and bundle a current dependency set; the project does not
# promise support for every historical combination at these lower bounds.
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "matplotlib>=3.11.1",
    "pandas>=2.2.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
